--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -1,2 +1,11 @@
-<h1>Doctors#index</h1>
-<p>Find me in app/views/doctors/index.html.erb</p>
+<h1>Doctors</h1>
+<%= link_to 'Add Doctor', new_doctor_path %>
+<hr />
+<h3>Current Doctors</h3>
+<ul>
+  <% @doctors.each do |doctor| %>
+    <li>
+      <%= link_to doctor.name, doctor %>
+    </li>
+  <% end %>
+</ul>
