--- a/app/views/doctors/new.html.erb
+++ b/app/views/doctors/new.html.erb
@@ -1,2 +1,10 @@
-<h1>Doctors#new</h1>
-<p>Find me in app/views/doctors/new.html.erb</p>
+<h1>Add New Doctor</h1>
+<%= form_with(model: @doctor, local: true, class: "ui form" ) do |f| %>
+  <div class="field">
+    <%= f.label :name %>
+    <%= f.text_field :name, required: true, placeholder: "Full Name" %>
+    <%= f.label :specialty %>
+    <%= f.text_field :specialty, required: true, placeholder: "Specialty" %>
+  </div>
+  <%= f.submit nil, class: "ui blue button inverted" %>
+<% end %>
