--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -1,2 +1,14 @@
-<h1>Doctors#show</h1>
-<p>Find me in app/views/doctors/show.html.erb</p>
+<h1>Dr. <%= @doctor.name %></h1>
+<h3>Specialty: <%= @doctor.specialty %></h3>
+<%= link_to "Edit Doctor Info", edit_doctor_path %>
+<br/>
+<%= link_to "Delete Doctor", @doctor, method: :delete %>
+<hr/>
+<h3>Patients</h3>
+  <ul>
+    <% @doctor.patients.each do |patient| %>
+      <li>
+      <%= link_to (patient.first_name + ' ' + patient.last_name), patient %>
+      </li>
+    <% end %>
+  </ul>
