--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -1,2 +1,11 @@
-<h1>Patients#index</h1>
-<p>Find me in app/views/patients/index.html.erb</p>
+<h1>Patients</h1>
+<%= link_to 'Add Patient', new_patient_path %>
+<hr />
+<h3>Patient List</h3>
+<ul>
+  <% @patients.each do |patient| %>
+    <li>
+      <%= link_to (patient.first_name + ' ' + patient.last_name), patient %>
+    </li>
+  <% end %>
+</ul>
